--- a/research/st_01.ipynb
+++ b/research/st_01.ipynb
@@ -38,6 +38,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class DataInjectionConfig:\n",
+    "    root_dir:Path\n",
+    "    source_URL:str\n",
+    "    local_data_file:Path\n",
+    "    unzip_dir: Path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
