--- a/research/st_04.ipynb
+++ b/research/st_04.ipynb
@@ -303,12 +303,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "41e07d5902c839bef78ac6918475276ad73aad532fb911cd4f778ba7d9ff83a7"
+    "hash": "9b0849771dca4332663e1fe07c4570614ec9e3bf3accdc0c17fb9956b40c0c06"
    }
   }
  },
